syntax = "proto3";

package base;

option cc_generic_services = true;
option java_generic_services = true;
option py_generic_services = true;

option java_package = "com.yy.wolfkill.h5game.guojitiaoqi.pb";
option java_multiple_files = true;

message LoginRes {
    int32 code = 1;
    string msg = 2;
    PostData postData = 3;
}

message PostData {
    string channel = 1;
    string gameid = 2;
    string roomid = 3;
    Player player = 4;
}

message Player {
    string uid = 1;
    string name = 2;
    string avatarurl = 3;
    string teamid = 4;
    string opt = 5;
	int32 sex = 6;
}

message UserLoginRes {
    int32 code = 1;
    string msg = 2;
    repeated Player data = 3;
}

message LoadProgressReq {
    int32 progress = 1;
}
message LoadProgressRes {
    int32 code = 1;
    string msg = 2;
    repeated LoadProgressResData data = 3;
}
message LoadProgressResData {
    string uid = 1;
    int32 progress = 2;
}

message ReadyReq {
    bool ready = 1;
}
message ReadyRes {
    int32 code = 1;
    string msg = 2;
    ReadyResData data = 3;
}
message ReadyResData {
    repeated string uids = 1;
}

message UnvarnishedReq {
    bytes data = 1;
}
message UnvarnishedRes {
    int32 code = 1;
    string msg = 2;
    bytes data = 3;
}

message HeartReq {
    int64 reqTimestamp = 1; // 客户端时间戳
}
message HeartRes {
    int64 timestamp = 1;    // 服务器时间戳
    int64 reqTimestamp = 2; // 客户端时间戳
}

message GiveUpReq {

}
message GiveUpRes {
    int32 code = 1;
    string msg = 2;
    GiveUpResData data = 3;
}

message ForceExitReq {

}
message ForceExitRes {
    int32 code = 1;
    string msg = 2;
    GiveUpResData data = 3;
}

message GiveUpResData {
    string uid = 1;
}